ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.3.0-rc0
    • Affects Version/s: 8.1.0, 8.2.0
    • Component/s: None
    • None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • CAR Team 2025-11-10
    • 200
    • 🟦 Shard Catalog
    • None
    • None
    • None
    • None
    • None
    • None

      The listCollection attaches the `configDebugDump` at every call  but it doesn't in case it's a timeseries
      The 2 helper should stay equivalent. Once viewless timeseries will be the default option that helper can be removed.

      As part of this ticket we should

      • fix the helper
      • extend the jstests/core/catalog/list_collections_config_debug_dump.js to account for a timeseries
      • Improve debuggability of the jstests/core/catalog/list_collections_config_debug_dump.js, we should show what collection fails the assertions

            Assignee:
            Enrico Golfieri
            Reporter:
            Enrico Golfieri
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: