SERVER-113022 Appended configInfoDump to timeseries and views in config database (#43504)

GitOrigin-RevId: 630cbf83ba3564227172db991cc54c1db00a8411